# Matching-Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  simulation_results.txt  trading_session.csv
examples/: simulator_demo.cpp
include/: account.hpp  event.hpp  fill.hpp  latency_tracker.hpp  market_data_generator.hpp  order.hpp  order_book.hpp  performance_metrics.hpp  position_manager.hpp  replay_engine.hpp  snapshot.hpp  strategies.hpp  strategy.hpp  timer.hpp  trading_simulator.hpp  types.hpp
src/: account.cpp  event.cpp  latency_tracker.cpp  main.cpp  market_data_generator.cpp  order.cpp  order_book.cpp  order_book_matching.cpp  performance_metrics.cpp  position_manager.cpp  replay_engine.cpp  snapshot.cpp  strategies.cpp  strategy.cpp  trading_simulator.cpp
tests/: CMakeLists.txt  main.cpp  test_account.cpp  test_fill_router.cpp  test_helpers.hpp  test_iceberg_orders.cpp  test_market_data_generator.cpp  test_matching_logic.cpp  test_order.cpp  test_order_book_advanced.cpp  test_order_book_basic.cpp  test_performance_benchmarks.cpp  test_persistence.cpp  test_position_manager.cpp  test_replay_engine.cpp  test_stop_orders.cpp  test_throughput_benchmark.cpp  test_tif_policies.cpp
